--- a/_sass/podStats.scss
+++ b/_sass/podStats.scss
@@ -4,7 +4,7 @@
     margin: auto;
     align-items: center;
     margin: 20px 20px;
-    background-color: var(--cardBg);
+    background-color: white;
     border-radius: .375rem;
     padding: 1.5em;
     font-size: 1.2em;
@@ -25,8 +25,8 @@
   .leadership-board th {
     font-weight: bold;
     text-align: left;
-    background-color: var(--mainBg);
-    color: var(--textColor);
+    background-color: #f2f2f2;
+    color: #333;
   }
 
   .container {
@@ -37,7 +37,7 @@
   }
   
   .fellowRow:nth-child(even) {
-    background-color: var(--mainBg);
+    background-color: #f2f2f9;
     
   }
   
